# ams_function_generator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake  upload.sh
.devcontainer/: devcontainer.json
source/: SD_Driver.c  SD_Driver.h  SPI_Driver.c  SPI_Driver.h  TFT_touch_driver.c  TFT_touch_driver.h  TFTdriver1.c  encoder.c  encoder.h  i2c_master.h  lcd_menu.c  lcd_menu.h  main.c  pin_definitions.h  pwm.c  pwm.h  spi.c  spi.h  uart.c  uart.h
